--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "mongoose": "^8.17.0",
     "mongoose-sequence": "^6.0.1",
     "motion": "^11.11.17",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
   },
